fix: (WinningLottoTest) 로또 생성 시 불변 타입 리스트로 생성
- 테스트 일관성 고려